--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -36,7 +36,10 @@
       src="https://kit.fontawesome.com/c3aa118421.js"
       crossorigin="anonymous"
     ></script>
-
+    <script
+      src="https://kit.fontawesome.com/c3aa118421.js"
+      crossorigin="anonymous"
+    ></script>
     <title>My Travel Journal</title>
   </head>
   <body>
